--- a/style.css
+++ b/style.css
@@ -4,16 +4,48 @@ body {
 }
 
 .header{
-    text-align: center;
     background-color: rgb(27, 70, 60);
-    border-bottom-left-radius: 100%;
-    border-bottom-right-radius: 100%;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    width: 100%;
+    height: 120px;
+}
+
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.header h1{
+    text-align: center;
+}
+
+.header h4{
+    margin-left: 20px;
 }
 
 .header img {
-    width: 120px;
+    width: 100px;
+    margin-left: 20px;
 }
 
 #title {
+    text-align: center;
+}
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+.footer {
+    background-color: rgb(16, 41, 35);
     text-align: center;
 }
