--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
 }
 
 .header{
-    background-color: rgb(27, 70, 60);
+    background-color: rgb(0, 0, 0);
     border-bottom-left-radius: 50px;
     border-bottom-right-radius: 50px;
     width: 100%;
@@ -15,6 +15,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
 }
 
 
@@ -46,6 +47,7 @@ html, body {
     width: 100%;
 }
 .footer {
-    background-color: rgb(16, 41, 35);
+    background-color: rgb(0, 0, 0);
     text-align: center;
+    color: white;
 }
